--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ permalink: /
                         </div>
                         <div class="vertical-timeline-content">
                             <h2><span data-i18n="career.pandora">Pandora Media Inc.</span></h2>
-                            <p><span data-i18n="career.pandora_des">I'm currently a Music Science intern at Pandora Media Inc. (Oakland, CA, USA). I'm working with Tao Ye, Erik Schmidt and Puya-Hossein on Deep Learning algorithms for sequence classification. </span></p>
+                            <p><span data-i18n="career.pandora_des">I'm currently a Music Science intern at Pandora Media Inc. (Oakland, CA, USA). I'm working with Tao Ye, Erik Schmidt and Puya-Hossein Vahabi on Deep Learning algorithms for sequence classification. </span></p>
                             <span class="vertical-date"><span data-i18n="career.pandora_date"> Jun 2016 </span><br/> <small><span data-i18n="career.pandora_job">Intern</span></small> </span>
                         </div>
                     </div>
