--- a/index.html
+++ b/index.html
@@ -240,10 +240,15 @@ permalink: /
             <p>
                 That is an excerpt of my recent pubblications. The full list is available on <a href="https://scholar.google.it/citations?user=Ohw7wlkAAAAJ&hl=en">here</a>.
             </p>
-            <b>In Conference</b>
+            <b>In Conferences</b>
+            <p>
+                <i>Massimo Quadrana</i>, Alexandros Karatzoglou, Balázs Hidasi and Paolo Cremonesi. 2017.
+                <b>Personalizing Session-based Recommendation with Hierarchical Recurrent Neural Networks. </b> ACM Recsys 2017 [To appear] <a href="static/papers/2017-personalizing-session-based.pdf">PDF</a>
+            </p>
+
             <p>
                 Balázs Hidasi, <i>Massimo Quadrana</i>, Alexandros Karatzoglou and Domonkos Tikk. 2016.
-                <b>Parallel Recurrent Neural Network Architectures for Feature-rich Session-based Recommendations. </b> ACM Recsys 2016 [To appear] <a href="static/papers/2016-feature-rnn-paper.pdf">PDF</a>
+                <b>Parallel Recurrent Neural Network Architectures for Feature-rich Session-based Recommendations. </b> ACM Recsys 2016 <a href="static/papers/2016-feature-rnn-paper.pdf">PDF</a>
             </p>
             <p>
                 Roberto Turrin, <i>Massimo Quadrana</i>, Roberto Pagano, Paolo Cremonesi and Andrea Condorelli. <b>“30Music listening and playlists dataset”</b> ACM Recsys 2015 <a href="static/papers/2015-30music-dataset.pdf">PDF</a>
