--- a/index.html
+++ b/index.html
@@ -245,6 +245,11 @@ permalink: /
                 <i>Massimo Quadrana</i>, Alexandros Karatzoglou, Balázs Hidasi and Paolo Cremonesi. 2017.
                 <b>Personalizing Session-based Recommendation with Hierarchical Recurrent Neural Networks. </b> ACM Recsys 2017 [To appear] <a href="static/papers/2017-personalizing-session-based.pdf">PDF</a>
             </p>
+            <p>
+                Leonardo Cella, Stefano Cerada, <i>Massimo Quadrana</i> and Paolo Cremonesi. 2017.
+                <b>Deriving Item Features Relevance from Past User Interactions. </b> ACM UMAP 2017 [To appear] 
+                <a href="static/papers/2017-deriving-item-features.pdf">PDF</a>
+            </p>
 
             <p>
                 Balázs Hidasi, <i>Massimo Quadrana</i>, Alexandros Karatzoglou and Domonkos Tikk. 2016.
