--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ permalink: /
                 <b>Personalizing Session-based Recommendation with Hierarchical Recurrent Neural Networks. </b> ACM Recsys 2017 [To appear] <a href="static/papers/2017-personalizing-session-based.pdf">PDF</a>
             </p>
             <p>
-                Leonardo Cella, Stefano Cerada, <i>Massimo Quadrana</i> and Paolo Cremonesi. 2017.
+                Leonardo Cella, Stefano Cereda, <i>Massimo Quadrana</i> and Paolo Cremonesi. 2017.
                 <b>Deriving Item Features Relevance from Past User Interactions. </b> ACM UMAP 2017 [To appear] 
                 <a href="static/papers/2017-deriving-item-features.pdf">PDF</a>
             </p>
