add link to hgru4rec

--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@ permalink: /
             <p>
                 <i>Massimo Quadrana</i>, Alexandros Karatzoglou, Balázs Hidasi and Paolo Cremonesi. 2017.
                 <b>Personalizing Session-based Recommendation with Hierarchical Recurrent Neural Networks. </b> ACM Recsys 2017 [To appear] <a href="static/papers/2017-personalizing-session-based.pdf">PDF</a>
+                <a href="https://github.com/mquad/hgru4rec">CODE</a>
             </p>
             <p>
                 Leonardo Cella, Stefano Cereda, <i>Massimo Quadrana</i> and Paolo Cremonesi. 2017.
