--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ permalink: /
             </p>
             <p>
                 Leonardo Cella, Stefano Cereda, <i>Massimo Quadrana</i> and Paolo Cremonesi. 2017.
-                <b>Deriving Item Features Relevance from Past User Interactions. </b> ACM UMAP 2017 [To appear] 
+                <b>Deriving Item Features Relevance from Past User Interactions. </b> ACM UMAP 2017 [To appear]
                 <a href="static/papers/2017-deriving-item-features.pdf">PDF</a>
             </p>
 
@@ -277,6 +277,9 @@ permalink: /
             </p>
 
             <b>In Journals</b>
+            <p>
+              <i>Massimo Quadrana</i>, Paolo Cremonesi and Dietmar Jannach. <b>Sequence-aware Recommender Systems</b> ACM Computing Surveys (<i>preprint</i>). <a href="static/papers/2018-seqrec_survey.pdf">PDF</a>
+            </p>
             <p>
                 <i>Massimo Quadrana</i>, Albert Bifet, and Ricard Gavaldà. <b>An efficient closed frequent itemset miner for the MOA stream mining system.</b> AI Communications28.1 (2015): 143-158. <a href="static/papers/2015-aicomm.pdf">PDF</a>
             </p>
